--- a/package.json
+++ b/package.json
@@ -32,5 +32,10 @@
   "homepage": "https://github.com/alex-ismailov/frontend-project-lvl2#readme",
   "dependencies": {
     "commander": "^6.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.13.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1"
   }
 }
