--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "commander": "^6.2.0"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "eslint": "^7.13.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1"
