--- a/.github/workflows/hexlet-check.yml
+++ b/.github/workflows/hexlet-check.yml
@@ -24,3 +24,18 @@ jobs:
         run: make lint
       - name: Run tests
         run: make test
+  coverage:
+    needs: [ testing ]
+    name: coverage
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@master
+    - uses: actions/setup-node@master
+      with:
+        node-version: [14.x]
+    - run: make i
+    - uses: paambaati/codeclimate-action@v2.2.4
+      env:
+        CC_TEST_REPORTER_ID: b7853d9de39ca64b5bf2f370317755cfa9cfdd0b7428ae31c23aa1b3c29ba4fd
+      with:
+        coverageCommand: npm coverage
