--- a/.github/workflows/hexlet-check.yml
+++ b/.github/workflows/hexlet-check.yml
@@ -32,7 +32,7 @@ jobs:
     - uses: actions/checkout@master
     - uses: actions/setup-node@master
       with:
-        node-version: [14.x]
+        node-version: ${{ matrix.node-version }}
     - run: make i
     - uses: paambaati/codeclimate-action@v2.2.4
       env:
