--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "bin": {
     "gendiff": "bin/gendiff.js"
   },
+  "scripts": {
+    "test": "npx -n --experimental-vm-modules jest .",
+    "test-watch": "npx -n --experimental-vm-modules jest --watchAll ."
+  },
   "type": "module",
   "repository": {
     "type": "git",
