--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "gendiff": "bin/gendiff.js"
   },
   "scripts": {
-    "test": "npx -n --experimental-vm-modules jest .",
-    "test-watch": "npx -n --experimental-vm-modules jest --watchAll ."
+    "test": "npx -n --experimental-vm-modules jest",
+    "test-watch": "npx -n --experimental-vm-modules jest --watchAll"
   },
   "type": "module",
   "repository": {
