--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "homepage": "https://github.com/alex-ismailov/frontend-project-lvl2#readme",
   "dependencies": {
     "commander": "^6.2.0",
+    "js-yaml": "^3.14.1",
     "lodash": "^4.17.20"
   },
   "devDependencies": {
