--- a/.editorconfig
+++ b/.editorconfig
@@ -1,9 +1,13 @@
 root = true
 
-[/__fixtures__/]
+[*]
 charset = utf-8
 indent_style = space
 indent_size = 2
 end_of_line = lf
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[__fixtures__/*]
+trim_trailing_whitespace = false
+insert_final_newline = false
