--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "npx -n --experimental-vm-modules jest",
-    "test-watch": "npx -n --experimental-vm-modules jest --watchAll"
+    "test-watch": "npm run test -- --watchAll"
   },
   "type": "module",
   "repository": {
