--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -10,6 +10,9 @@
     - 'airbnb-base'
     - 'plugin:jest/recommended'
 
+  parserOptions:
+    ecmaVersion: 11
+    sourceType: module
 
   rules:
     import/extensions: 0
