--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "bin": {
     "gendiff": "bin/gendiff.js"
   },
+  "private": false,
   "scripts": {
     "test": "npx -n --experimental-vm-modules jest",
-    "test-watch": "npm run test -- --watchAll"
+    "test-watch": "npm run test -- --watchAll",
+    "postinstall": "husky install",
+    "prepublishOnly": "pinst --disable",
+    "postpublish": "pinst --enable"
   },
   "type": "module",
   "repository": {
